[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/dynamic_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/scenes/page_login.gd" type="Script" id=2]
[ext_resource path="res://src/prefabs/Textbar.tscn" type="PackedScene" id=3]

[sub_resource type="Theme" id=10]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 16.0
expand_margin_right = 16.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.160784, 0.160784, 0.160784, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 16.0
expand_margin_right = 16.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 10 )
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Inputs" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" parent="Inputs" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = -193.312
margin_top = -112.0
margin_right = 201.208
margin_bottom = -47.192
mouse_filter = 1

[node name="Tip" parent="Inputs/Username" index="0"]
text = "Username"

[node name="Label" type="Label" parent="Inputs/Username"]
anchor_left = 0.044
anchor_top = 0.999
anchor_right = 0.044
anchor_bottom = 0.999
margin_left = 15.9531
margin_top = 16.0038
margin_right = 188.953
margin_bottom = 55.0038
custom_fonts/font = ExtResource( 1 )
text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" parent="Inputs" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = -192.0
margin_top = 32.747
margin_right = 208.0
margin_bottom = 97.747
mouse_filter = 1

[node name="Tip" parent="Inputs/Password" index="0"]
text = "Password"

[node name="Line" parent="Inputs/Password" index="1"]
secret = true

[node name="Label2" type="Label" parent="Inputs/Password"]
margin_left = 32.0
margin_top = 78.0
margin_right = 205.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 1 )
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmPassword" parent="Inputs" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = -192.0
margin_top = 160.747
margin_right = 208.0
margin_bottom = 225.747
mouse_filter = 1

[node name="Tip" parent="Inputs/ConfirmPassword" index="0"]
text = "Confirm Password"

[node name="Line" parent="Inputs/ConfirmPassword" index="1"]
editable = false
secret = true

[node name="Label2" type="Label" parent="Inputs/ConfirmPassword"]
margin_left = 26.0
margin_top = 76.0
margin_right = 345.0
margin_bottom = 115.0
custom_fonts/font = ExtResource( 1 )
text = "Confirm Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login" type="Button" parent="Buttons"]
margin_left = 240.0
margin_top = 585.0
margin_right = 332.0
margin_bottom = 624.0
custom_fonts/font = ExtResource( 1 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateAccount" type="Button" parent="Buttons"]
margin_left = 112.0
margin_top = 665.0
margin_right = 467.0
margin_bottom = 704.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 8 )
text = "Create Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmAccount" type="Button" parent="Buttons"]
margin_left = -444.0
margin_top = 560.0
margin_right = -69.0
margin_bottom = 599.0
custom_fonts/font = ExtResource( 1 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "Confirm New Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToLogin" type="Button" parent="Buttons"]
margin_left = -444.0
margin_top = 625.0
margin_right = -69.0
margin_bottom = 664.0
custom_fonts/font = ExtResource( 1 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "Back to Login"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="Buttons/CreateAccount" to="." method="_on_CreateAccount_pressed"]
[connection signal="pressed" from="Buttons/ConfirmAccount" to="." method="_on_ConfirmAccount_pressed"]
[connection signal="pressed" from="Buttons/BackToLogin" to="." method="_on_BackToLogin_pressed"]

[editable path="Inputs/Username"]
[editable path="Inputs/Password"]
[editable path="Inputs/ConfirmPassword"]
